aws_network/main.tf
provider "aws" {
  region = "us-east-1"
}

data "aws_availability_zones" "available" {}

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  tags = merge(var.tags, {Name = "${var.env}-vpc"})
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = merge(var.tags, {Name = "${var.env}-igw"} )
}

resource "aws_subnet" "public_subnets" {
  count = length(var.public_subnet_cidrs)
  vpc_id = aws_vpc.main.id
  cidr_block = var.public_subnet_cidrs[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true
  tags = merge(var.tags, {Name = "${var.env}-public_subnet ${count.index + 1 }"})
}

resource "aws_route_table" "public_subnets" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  } 
  tags = merge(var.tags, {Name = "${var.env}-route-public-subnets"})
  
  depends_on = [
    aws_internet_gateway.main
  ]
}

resource "aws_route_table_association" "public_routes" {
  count = length(aws_subnet.public_subnets[*].id)
  route_table_id =  aws_route_table.public_subnets.id
  subnet_id = element(aws_subnet.public_subnets[*].id, count.index)
}

#-----------------------Nat gateways with Elastic IPs -------------------------

resource "aws_eip" "nat" {
  count = length(var.private_subnet_cidrs)
  vpc = true
  tags = merge(var.tags, {Name = "${var.env}-nat-gw-${count.index + 1}"})
}

resource "aws_nat_gateway" "nat" {
  count = length(var.private_subnet_cidrs)
  allocation_id = element(aws_eip.nat[*].id, count.index)
  subnet_id = element(aws_subnet.public_subnets[*].id, count.index)
  tags = merge(var.tags, {Name = "${var.env}-nat-gw-${count.index + 1}"})
}

#----------------------------Private subnets and Routing ---------------------

resource "aws_subnet" "private_subnets"{
  count = length(var.private_subnet_cidrs)
  vpc_id = aws_vpc.main.id
  cidr_block = var.private_subnet_cidrs[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]
  tags = merge(var.tags, {Name = "${var.env}-private${count.index + 1}"})
}

resource "aws_route_table" "private_subnets"{
  count = length(var.private_subnet_cidrs)
  vpc_id = aws_vpc.main.id
  route{
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat[count.index].id
  }
  tags = merge(var.tags, {Name ="${var.env}-route-private-subnet-${count.index}"})
}

resource "aws_route_table_association" "private_routes"{
  count = length(aws_subnet.private_subnets[*].id)
  route_table_id = aws_route_table.private_subnets[count.index].id
  subnet_id = element(aws_subnet.private_subnets[*].id, count.index)
}
